--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,11 +30,11 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_display: large
           config_timezone: Europe/London
-          plugin_achievements: no
+          plugin_achievements: yes
           plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
-          plugin_activity: no
+          plugin_activity: yes
           plugin_activity_days: 14
           plugin_activity_filter: all
           plugin_activity_limit: 5
@@ -42,7 +42,7 @@ jobs:
           plugin_activity_visibility: all
           plugin_followup: yes
           plugin_followup_sections: repositories
-          plugin_habits: no
+          plugin_habits: yes
           plugin_habits_charts_type: classic
           plugin_habits_days: 14
           plugin_habits_facts: yes
