--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: lowlighter/metrics@main
+      - uses: stalomeow/metrics@projects-v2 # lowlighter/metrics@main
         with:
           # Your GitHub token
           # The following scopes are required:
@@ -34,7 +34,6 @@ jobs:
           plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
-          plugin_achievements_ignored: manager
           plugin_activity: yes
           plugin_activity_days: 14
           plugin_activity_filter: all
