--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: stalomeow/metrics@projects-v2 # lowlighter/metrics@main
+      - uses: raditotev/metrics@fix-failing-plugins-achievments-activity-habits # stalomeow/metrics@projects-v2, lowlighter/metrics@main
         with:
           # Your GitHub token
           # The following scopes are required:
