--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,7 +12,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: raditotev/metrics@fix-failing-plugins-achievments-activity-habits # stalomeow/metrics@projects-v2, lowlighter/metrics@main
+      - uses: stalomeow/metrics@projects-v2 # lowlighter/metrics@main
         with:
           # Your GitHub token
           # The following scopes are required:
@@ -30,6 +30,16 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_display: large
           config_timezone: Europe/London
+          plugin_languages: yes
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_limit: 8
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
           plugin_achievements: yes
           plugin_achievements_display: detailed
           plugin_achievements_secrets: yes
@@ -47,16 +57,6 @@ jobs:
           plugin_habits_days: 14
           plugin_habits_facts: yes
           plugin_habits_from: 200
-          plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_categories: markup, programming
-          plugin_languages_colors: github
-          plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
-          plugin_languages_sections: most-used
-          plugin_languages_threshold: 0%
           plugin_lines: yes
           plugin_notable: yes
           plugin_notable_from: organization
